Update 6.1P Chameleon T2_2023.md

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -398,7 +398,7 @@ The web development team will...
 | **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes |  |
 | **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  |
 | **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security | Yes | | 
-| **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  | |
+| **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  | I tried to do the SQL injection login bypass and failed and  performed some vulnerability scan and found some vulnerabilities |
 | **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | | 
 | **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  | |  
 | **Zachary Max Kein** | 220277143 | Undergrad | Senior | Cyber Security |  | |
