Patched the EVAT group memeber contribution

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -240,15 +240,16 @@ Web Dev
 #### EVCFLO Project Members Contributions
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
-| **Yesini Charithma Liyanage** | 222063923 | Undergrad | Senior | Web Dev | Yes |  |
+| **Yesini Charithma Liyanage** | 222063923 | Undergrad | Senior | Web Dev | Yes | As EVCFLO’s project lead, my contributions encompass a range of initiatives, from chairing all team meetings, to producing technical documentation for GCP deployment, working with unit staff to establish a LinkedIn page for Chameleon and developing an "About Our Team" page for EVCFLO's website, organizing documentation folders, structuring Trello and GitHub repositories, offering cross-project technical support, implementing DevOps methodologies for team workflow, crafting user stories, optimizing onboarding processes, showcasing technical leadership through Trello and GitHub oversight, and presently, contributing to the design of prototypes and modifications for the EVCFLO website. |
 | **Jamie Connor Davidson** | 222356461 | Postgrad | Senior | Data Science | Yes | I have so far managed the data science team, I organised tasks using Trello and setup our GitHub repository to help with onboarding for T2-2023. I created a roadmap divided into five bi-weekly sprints, Sprint 1, I creating a useful notebook for generating up-to-date station location datasets. In Sprint 2, I provided the team with an automated notebook that produced a reference HTML document for dataset summary information, enhancing the project's accessibility and documentation. Moving forward, I will be coordinating the team to help showcase our deliverables and provide impactful data-driven solutions onto the EVCFLO website. |
 | **Jennifer Yau** | 222087183 | Postgrad | Junior | Data Science | Yes | |
 | **Yuvraj Sekhon** | 222184401 | Undergrad | Junior | Data Science |  |  |
 | **Mark Justin Premier** | 222115089 | Postgrad | Senior | Web Dev | Yes |Helped create Trello board tasks and organise team meetings for team members. Created a roadmap document at the beginning of the trimester to ensure work stayed on track and cleaned the GitHub Repo before the trimester began to ensure no unused branches could cause confusion. Gained access to the Google Cloud Platform project, including increased permissions to allow an eventual CI/CD pipeline to be built. Technical contribution is the revamped news page, which displays the latest news articles in a grid, using the newsAPI to collect news stories from websites. Am currently implementing a continuous integration pipeline in the GCP. |
 | **Ishika Khanna** | 219551957 | Undergrad | Senior | Web Dev | Yes |  | 
-| **Yousef Ashraf Y A Al-Mulla** | 221410734 | Undergrad | Senior | Web Dev |  |  |
+| **Yousef Ashraf Y A Al-Mulla** | 221410734 | Undergrad | Senior | Web Dev |  | I have contributed good ideas to the react project. My contributions includes creating an accessories and spare parts page which contains a form regarding the spare parts and accessories of the electric vehicle chargers and electric charging points for businesses, and using this form a business can  order spare parts, accessories or request an electric charging point in their business location from the website through the form. I have also created a certificate page which will include any certificates that chameleon gets in the future to show the achievements of the company.  |
 | **Hoi Fung Dicky** | 222383729 | Postgrad | Junior | Web Dev |  | |
-| **Shuodong Xing** | 219368407 | Undergrad | Junior | Web Dev |  |  |
+|**Shuodong Xing**| 219368407 | Undergrad| Junior| Web Dev| | Created more user options, updated reset password function, and implemented function to send users reset password emails. |
+|**Auth Chanakijkamjorn**| 218033849 | Undergrad| Junior| Web Dev| | I begin with researching about EV car and station and creating user story for EVCFLO website. I reviewed a week 3 meeting and getting access to team Trello board and Github. I attend a weekly meeting to update my task for everyone in the team and then I study and learn about React JS, component and other topics that related to our project. Now I’m starting to create a webpage for EVCFLO website. |
 
 <br> <a name="App dev"></a><h2 style="color:#4CB166">Evoleon</h2>
 <h4 style="color:#00A688">Overview</h4>
@@ -293,24 +294,19 @@ The team has created many user stories, and team members have divided the user s
 
 The team is making steps towards implementing the code and design outlined in our high-fidelity designs. This will allow the app to be closer aligned to the EVAT project design and colour schemes outlined. The leadership team will review the documentation and update areas for a smooth and efficient handover.
 
-<br>
-
 <h4 style="color:#00A688">Evoleon App Project Members</h4>
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
-| **Jordan Sam Cooke** | 220208777 | Undergrad | Senior | App Dev, Project | Yes |I have organised the onboarding of students to the Evoleon sub-group, which includes running meetings, creating documents, and updating the repository. I have guided students through discussions and meetings to successfully develop new features and implement design elements outlined for the previous designs. Technically reviewed and started to implement a complete overhaul of the colour scheme to allow for the use of colour variables while also utilising either dark or light mode colour schemes depending on the user's preference to allow for greater customisability. I created plans to reevaluate the current documentation of the Evoleon repository to allow for quicker and more effective onboarding next trimester.|
+| **Jordan Sam Cooke** | 220208777 | Undergrad | Senior | App Dev, Project | Yes | I have organised the onboarding of students to the Evoleon sub-group, which includes running meetings, creating documents, and updating the repository. I have guided students through discussions and meetings to successfully develop new features and implement design elements outlined for the previous designs. Technically reviewed and started to implement a complete overhaul of the colour scheme to allow for the use of colour variables while also utilising either dark or light mode colour schemes depending on the user's preference to allow for greater customisability. I created plans to reevaluate the current documentation of the Evoleon repository to allow for quicker and more effective onboarding next trimester.|
 | **Joel Murphy-Dyer** | 221081809 | Undergrad | Senior | App Dev| Yes | As a project lead for the application development team, I have implemented and coded a terms and conditions page to the app within the signup screen. Additionally, I have maintained regular contact with the team members on how they are progressing with their work.  |
-| **Aanan Abdullah** | 220499062 | Undergrad | Senior | App Dev |Co.|I created 2 screens where the first one was a Help and Support page listing common EV FAQs and Answers and a Settings screen. Then I provided guidance to several Junior students along with updating the Evoleon Trello board with updated links and more onboarding cards. I also presented a company status update during the Week 4 scheduled lecture and will do so in Week 7 as well.I have facilitated and taken meeting minutes for the weekly team meetings several times.|
-| **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Senior | App Dev |  |  |
+| **Aanan Abdullah** | 220499062 | Undergrad | Senior | App Dev |Co.| I created 2 screens where the first one was a Help and Support page listing common EV FAQs and Answers and a Settings screen. Then I provided guidance to several Junior students along with updating the Evoleon Trello board with updated links and more onboarding cards. I also presented a company status update during the Week 4 scheduled lecture and will do so in Week 7 as well.I have facilitated and taken meeting minutes for the weekly team meetings several times.|
+| **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Senior | App Dev |  | Updated the backend of the application to overhaul the entire navigation of the application. Made changes to critical areas of the Evoleon repository to allow the smooth repository transition to the next trimester. |
 | **Khanh Nguyen Nguyen** | 221393506 | Undergrad | Senior | App Dev |  |   |
-| **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Senior | App Dev |  |I'm in charge of charging status part. To complete this mission, I start writing coding to carry out a future in order to show the current charging status. I've done some tests on coding and they are still getting some errors to exporting the best result. And i am attending meetings with my teammates and collaborating with them to find solutions and new ideas for our project.|
-| **Wei Liang Tiew** | 220427347 | Undergrad | Senior | App Dev, Design |  |Created a FAQ page for the website, still further work required. Participate in the weekly meetings contibuting to the general discussion and helping team members where I can. |
+| **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Senior | App Dev |  | I'm in charge of charging status part. To complete this mission, I start writing coding to carry out a future in order to show the current charging status. I've done some tests on coding and they are still getting some errors to exporting the best result. And i am attending meetings with my teammates and collaborating with them to find solutions and new ideas for our project.|
+| **Wei Liang Tiew** | 220427347 | Undergrad | Senior | App Dev, Design | |
 | **Daniel D'Amore** | 221240956 | Undergrad | Junior | App Dev |  | Investigating and developing a methodology to hide the delete and update details buttons when not logged in. |
-| **Asher Lam** | 221254112 | Undergrad | Junior | Web Dev |  |I am under the app development team, my contribution so far has been researching methods on implement my design on availability on charging station and beginning design elements in figma prototypes|
-|**Shuodong Xing**| 219368407 | Undergrad| Junior| App Dev| | Created more user options, updated reset password function, and implemented function to send users reset password emails. |
-
-
+| **Asher Lam** | 221254112 | Undergrad | Senior | Web Dev |  | I have been working on my implementation for password visibility. Also researching methods on implement my design on availability on charging station|
 
 <a name="playground"></a><h2 style="color:#336699">Melbourne Open Data</h2>
 
