--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -371,24 +371,24 @@ The web development team will...
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
 | **Chaoyi (Barry) Chen** | 220358865 | Undergrad | Senior | MOP Project Co-Lead, Data Science | Yes | |
-| **Mollie Fernandez** | 217285498 | Postgrad | Junior | MOP Project Co-Lead, Cyber Security | Yes |  |
+| **Mollie Fernandez** | 217285498 | Postgrad | Junior | MOP Project Co-Lead, Cyber Security | Yes | Within my role as project co-lead I have helped with all comapny tasks, 2.1P and 6.1P. I am also on the InnoFes committee for Chameleon and am responsible for all of the Chameleon aspects and products to be made for InnoFes. In addition to this I ran the client meeeting and organised our meeting time with our client Remi Cattier. I was also a presenter of the week 4 junior lecture update. |
 | **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | |
 | **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  |
-| **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes | |
+| **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes | I'm currently working on a use case to understand  pedestrian accidents and how age affects them. It focuses on solutions like giving older people and disabled people more time to cross the road using touch card so far, data extraction has been done after choosing the data for analysis. |
 | **Yash Krupanand Daware** | 222482648 | Postgrad | Junior | Data Science | Yes | |
 | **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science | Yes | |
 | **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science | Yes | I am working with Nathan to develop a use case called Urban Art Explorer, we are using 3 datasets from the City of Melbourne Open Data. At the start of the trimester, I created a Trello card for Nathan and me. I added a checklist to keep us on track and to mark our progress. I was the host of the weekly team meeting in week 6. I went through how to set up an introduction to the use case and I am doing a proper tutorial on the process of formatting an introduction for use cases. During the break, I finished the rough cut for the introduction of the use case and figured out how to filter out duplicate data.|
 | **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  |  I developed a new use case and set up three new APIs. I filtered the APIs to receive only the necessary data and combined them into one dataframe. After removing duplicates, I implemented code to find the closest piece of art to the user's location. I also added links for users to view the art. Using the Google API, I converted coordinates into addresses. The distance to each piece of art is also displayed. Furthermore, I integrated a map, expanded on the use case, and created another version to locate the nearest bar.|
-| **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science|  |  |
-| **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  |  |
+| **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science|  | I created a new use case - A preview of the changes in the city of Melbourne, and obtained data through APIs and performed data extraction. And pushed my work to my GitHub playground.|
+| **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  | I have updated the spot parking use case to api 2.1. This required updating 3 datasets and filtering them. Afterwards, I had to fix the interactive widget. I'm currently debugging it. I've also begun work on a new use case about pedestrian traffic and banner pole placements. |
 | **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  |  |
 | **Siju Deng** | 222376251 | Postgrad | Junior | Data Science |  |  |
-| **THI THANH QUYEN (Amy) Tran** | 213358131 | Undergrad | Senior | Data Science | |  |
-| **Prathibha Kandawala** | 222440671 | Postgrad | Junior | Data Science |  | |
-| **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team | Yes |  |
-| **Yashika Arora** | 221080858 | Undergrad | Junior | Dev Team | Yes |  |
+| **THI THANH QUYEN (Amy) Tran** | 213358131 | Undergrad | Senior | Data Science | | My use case that I’ve developed aims to deliver a tool for tourists visiting Melbourne city to create a unique walking experience with recommendations of landmarks and places of interest customised to their preference. So far, I have successfully extracted two datasets from the client website via API, processed the data into dataframe and merged them based on their longitude and latitude coordinates. I have grouped the landmarks and places of interest by their categories and the proximity from each other so that for every walk a tourist chooses to do, they can input their preference or areas of interest, and the tool would provide a list of relevant landmarks within a pre-determined walking distance parameter.  |
+| **Prathibha Kandawala** | 222440671 | Postgrad | Junior | Data Science |  | I began learning about GitHub and Trello through team resources, upskilled in unit and project understanding, and initiated data retrieval.|
+| **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team | Yes | Update tutorial documents and record tutorial videos. Update the email address which within sending email functionality. Sort out and allocate tasks to teammates, divide the team into two different teams to work on specific tasks. I mainly update old design for 4 previous user cases pages in total. |
+| **Yashika Arora** | 221080858 | Undergrad | Junior | Dev Team | Yes | Setting up the Environment, Presenting the team for junior and senior meeting, getting 3 use case pages fixed before the deadline even after all the issues with environment setup, getting multiple Linked Learning certificates for upskilling, additionally working on a documentation which includes all the issues faced, the solution and what can be done differently in next trimester. |
 | **Ramandeep Singh** | 222196318 | Undergrad | Junior | Dev Team |  |  |
-| **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  |  |
+| **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  | As a participant of the Chameleon (MOP) Web Development Team, my responsibilities encompassed resolving the issue related to four use cases that were not appearing on our website's homepage. I meticulously examined and improved these use cases, namely Event-Disruption, Residential_Dwelling_Profile, Entertainment_Location_Projection, and Smart_Bin_&_Disposal_Optimization, ensuring their uniform and visually pleasing presentation to users. As the project unfolded, I was assigned by the leadership team to offer guidance and mentorship to a junior team member. This entailed clarifying tasks and steering her in approaching her designated use case, "Pedestrian_Safety_Part2," within the project's first phase.|
 | **Amulya Gyawali** | 219365275 | Undergrad | Junior | Dev Team |  |  |
 | **Izaz Ishaque** | 221005704 | Undergrad | Senior | Cyber Security | Yes | Migrated students to their preferred teams, Conducted a security audit of MOP (Consisting of a vulnerability assessment, Encryption testing, Error Handling, Security Headers and method validation) with vulnerabilities found alongside suggestions to fix them, Created a tutorial for the juniors on using GitHub, Created a backup/Disaster recovery plan for all of Chameleon and submitted to Jesse for review. Currently Auditing the Chameleon Website with Zac Kein and currently stress testing the current Chameleon website to test the maximum capacity of users that the website can take. |
 | **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes |  |
