Update 6.1P Chameleon T2_2023.md
- update achievement

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -128,7 +128,8 @@ The Chameleon Website aims to accumulate all the information about the Chameleon
 <h4 style="color:#336699; text-align:left;">EV Adoption Tools</h4>
 <b>Group Project Lead:</b> Yesini Charithma Liyanage & Jordan Sam Cooke
 
-<h5> EV Charger Forecasting & Location Optimisation (_sub project 1)_ </h5>
+<h5> EV Charger Forecasting & Location Optimisation (_sub project 1) </h5>
+
 - Sub Project Lead: Yesini Charithma Liyanage
 - Web Dev Lead: Mark Premier
 - Data Science Lead: Jamie Connor Davidson
@@ -370,7 +371,7 @@ The web development team will...
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
-| **Chaoyi (Barry) Chen** | 220358865 | Undergrad | Senior | MOP Project Co-Lead, Data Science | Yes | |
+| **Chaoyi (Barry) Chen** | 220358865 | Postgrad | Senior | MOP Project Co-Lead, Data Science | Yes | Being MOP project lead, I have assisted, organised, and presented for Junior onboarding. Hosted and organised leadership and project meetings with technical demonstrations. Reviewed and merged project-related pull requests on GitHub. Organised and managed project Trello board. Organised and participated in the MOP 1st client meeting. Collaborated with other project leads on contributing to the company report and trying to resolve the ongoing MOP website GCP issue. Created and demonstrated Trello board and CoM API key registration tutorials. Reworked Smart Bin use case with updated data source and new data handling method, implemented AI/ML model to generate insights from the dataset.|
 | **Mollie Fernandez** | 217285498 | Postgrad | Junior | MOP Project Co-Lead, Cyber Security | Yes | Within my role as project co-lead I have helped with all comapny tasks, 2.1P and 6.1P. I am also on the InnoFes committee for Chameleon and am responsible for all of the Chameleon aspects and products to be made for InnoFes. In addition to this I ran the client meeeting and organised our meeting time with our client Remi Cattier. I was also a presenter of the week 4 junior lecture update. |
 | **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | |
 | **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  |
