Update 6.1P Chameleon T2_2023.md
-update MOP web dev team progress, achievements and future plans

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -349,22 +349,24 @@ The Data Science team has...
 
 The Cyber Security team has... 
 
-The Web Dev team has...
+The web dev team has updated the missing pages of the MOP website, the team then successfully displayed these missing pages on the website home page and solved the consistency issues on most of the user case page design.
 
 The list below outlines the team's main achievements so far:
 
 - Completed repointing some of the published use case APIs.
 - Completed defining a series of use cases to be explored by the DS team.
 - Presented new use case ideas to the client at the City Of Melbourne.
+- All the missing pages of the website have been fixed and displayed properly on home page.
+- The consistency issues of web design on most user case pages have been fixed.
 **MOP ACHIEVEMENTS TO BE LISTED HERE**
 
 
 #### Next Steps
-The Data Science team will look toward completing sprint 1, which consists of various use case analysis and repointing of API from published use cases. The team will reconvene to conceptualise a new line of use cases. The backlog created for this meeting will be the future deliverables for the next trimester. 
+The Data Science team will continue to work on the incoming sprints, which consists of various use case analysis and repointing of API from published use cases. The team will reconvene to conceptualise new use cases as new backlog items ready for future deliverables for the next trimesters.
 
 The Security team will...
 
-The web development team will... 
+The web dev team will continue to work on publishing new user case pages and resolve design issues on the missing pages that have been displayed on the home page. Moreover, the team will try to fix deployment issues and develop more new functions for our website.
 
 
 #### Project Members
