--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -393,7 +393,7 @@ The web dev team will continue to work on publishing new user case pages and res
 | **Yashika Arora** | 221080858 | Undergrad | Junior | Dev Team | Yes | Setting up the Environment, Presenting the team for junior and senior meeting, getting 3 use case pages fixed before the deadline even after all the issues with environment setup, getting multiple Linked Learning certificates for upskilling, additionally working on a documentation which includes all the issues faced, the solution and what can be done differently in next trimester. |
 | **Ramandeep Singh** | 222196318 | Undergrad | Junior | Dev Team |  |  |
 | **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  | As a participant of the Chameleon (MOP) Web Development Team, my responsibilities encompassed resolving the issue related to four use cases that were not appearing on our website's homepage. I meticulously examined and improved these use cases, namely Event-Disruption, Residential_Dwelling_Profile, Entertainment_Location_Projection, and Smart_Bin_&_Disposal_Optimization, ensuring their uniform and visually pleasing presentation to users. As the project unfolded, I was assigned by the leadership team to offer guidance and mentorship to a junior team member. This entailed clarifying tasks and steering her in approaching her designated use case, "Pedestrian_Safety_Part2," within the project's first phase.|
-| **Amulya Gyawali** | 219365275 | Undergrad | Junior | Dev Team |  |  |
+| **Amulya Gyawali** | 219365275 | Undergrad | Junior | Dev Team |  | Researched about the Company, its project, goals and current progress. Communicated with team lead for guidance, and understood about my responsibilities and the tasks assigned to me. Set up the environment after troubleshooting the errors. Then worked on fixing up the missing use case page named 'Pedestriansafety part 2' to make it shown on our homepage of our website. |
 | **Izaz Ishaque** | 221005704 | Undergrad | Senior | Cyber Security | Yes | Migrated students to their preferred teams, Conducted a security audit of MOP (Consisting of a vulnerability assessment, Encryption testing, Error Handling, Security Headers and method validation) with vulnerabilities found alongside suggestions to fix them, Created a tutorial for the juniors on using GitHub, Created a backup/Disaster recovery plan for all of Chameleon and submitted to Jesse for review. Currently Auditing the Chameleon Website with Zac Kein and currently stress testing the current Chameleon website to test the maximum capacity of users that the website can take. |
 | **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes |  |
 | **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  |
