--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -400,7 +400,7 @@ The web dev team will continue to work on publishing new user case pages and res
 | **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security | Yes | | 
 | **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  | I tried to do the SQL injection login bypass and failed and performed some vulnerability scan and found some vulnerabilities |
 | **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | | 
-| **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  | |  
+| **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  | Running vulnerability scans using different tools to identify possible attacks the MOP site is vulnerable to, researching which of these vulnerabilities can be exploited and running a XML attack on the MOP site |  
 | **Zachary Max Kein** | 220277143 | Undergrad | Senior | Cyber Security |  | |
 | **Antony Raju** | 221471405 | Postgrad | Senior | Cyber Security |  | |
 | **Amal Paul** | 222197619 | Postgrad | Senior | Cyber Security | | Investing much time in learning more about security and risks. By taking classes, reading, and putting what I learn into practice, I'm achieving this. This makes it easier for me to comprehend and manage the risks of the internet. I'm getting better at securing PCs and data from malicious web activity by doing this. For this, I accessed LinkedIn, YouTube and other online platforms. My current priority is thoroughly testing the contact page. This entails careful inspection and assessment to make sure the functionality, usability, and security precautions adhere to the planned requirements. |
