Update 6.1P Chameleon T2_2023.md
-update MOP team member achievements

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -395,7 +395,7 @@ The web dev team will continue to work on publishing new user case pages and res
 | **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  | As a participant of the Chameleon (MOP) Web Development Team, my responsibilities encompassed resolving the issue related to four use cases that were not appearing on our website's homepage. I meticulously examined and improved these use cases, namely Event-Disruption, Residential_Dwelling_Profile, Entertainment_Location_Projection, and Smart_Bin_&_Disposal_Optimization, ensuring their uniform and visually pleasing presentation to users. As the project unfolded, I was assigned by the leadership team to offer guidance and mentorship to a junior team member. This entailed clarifying tasks and steering her in approaching her designated use case, "Pedestrian_Safety_Part2," within the project's first phase.|
 | **Amulya Gyawali** | 219365275 | Undergrad | Junior | Dev Team |  | Researched about the Company, its project, goals and current progress. Communicated with team lead for guidance, and understood about my responsibilities and the tasks assigned to me. Set up the environment after troubleshooting the errors. Then worked on fixing up the missing use case page named 'Pedestriansafety part 2' to make it shown on our homepage of our website. |
 | **Izaz Ishaque** | 221005704 | Undergrad | Senior | Cyber Security | Yes | Migrated students to their preferred teams, Conducted a security audit of MOP (Consisting of a vulnerability assessment, Encryption testing, Error Handling, Security Headers and method validation) with vulnerabilities found alongside suggestions to fix them, Created a tutorial for the juniors on using GitHub, Created a backup/Disaster recovery plan for all of Chameleon and submitted to Jesse for review. Currently Auditing the Chameleon Website with Zac Kein and currently stress testing the current Chameleon website to test the maximum capacity of users that the website can take. |
-| **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes |  |
+| **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes | Actively contributed to all Security and Evoleon squad meetings, Held a security meeting and also completed that meeting’s meeting minutes, Attended most leadership meetings, Presented at the MOP client meeting on behalf of the security team, Read through and edited the MOP security audit, Helped edit Company 2.1P task, co-ran a cross-site scripting attack on the MOP website with both Daniel D’Amore for the first half and Mariam Kassar for the second half, and found seven potential vulnerable pages, Allocated tasks to help complete the cross-site scripting attacks, Researched different Firebase security rules for Evoleon team, Currently finishing cross-site scripting attack, creating Firebase rules and creating a security channel with a getting started folder for students starting next term. |
 | **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  |
 | **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security | Yes | | 
 | **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  | I tried to do the SQL injection login bypass and failed and  performed some vulnerability scan and found some vulnerabilities |
