Update 6.1P Chameleon T2_2023.md
updated team members contributions

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -396,13 +396,13 @@ The web dev team will continue to work on publishing new user case pages and res
 | **Amulya Gyawali** | 219365275 | Undergrad | Junior | Dev Team |  | Researched about the Company, its project, goals and current progress. Communicated with team lead for guidance, and understood about my responsibilities and the tasks assigned to me. Set up the environment after troubleshooting the errors. Then worked on fixing up the missing use case page named 'Pedestriansafety part 2' to make it shown on our homepage of our website. |
 | **Izaz Ishaque** | 221005704 | Undergrad | Senior | Cyber Security | Yes | Migrated students to their preferred teams, Conducted a security audit of MOP (Consisting of a vulnerability assessment, Encryption testing, Error Handling, Security Headers and method validation) with vulnerabilities found alongside suggestions to fix them, Created a tutorial for the juniors on using GitHub, Created a backup/Disaster recovery plan for all of Chameleon and submitted to Jesse for review. Currently Auditing the Chameleon Website with Zac Kein and currently stress testing the current Chameleon website to test the maximum capacity of users the website can take. |
 | **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes | Actively contributed to all Security and Evoleon squad meetings, Held a security meeting and also completed that meeting’s meeting minutes, Attended most leadership meetings, Presented at the MOP client meeting on behalf of the security team, Read through and edited the MOP security audit, Helped edit Company 2.1P task, co-ran a cross-site scripting attack on the MOP website with both Daniel D’Amore for the first half and Mariam Kassar for the second half, and found seven potential vulnerable pages, Allocated tasks to help complete the cross-site scripting attacks, Researched different Firebase security rules for Evoleon team, Currently finishing cross-site scripting attack, creating Firebase rules and creating a security channel with a getting started folder for students starting next term. |
-| **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  |
+| **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes | Took initiative to present the presentation when the presenter was absent from the presentation class and hosted a weekly meeting to ensure that every team member was communicating their progress on their  assigned task for the company's projects. Research document-based cross-script attacks by adding an additional Trello board task in terms of attempts and evaluation based on the failed attempt. The research document also details the severity of cross-script attacks on projects. |
 | **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security | Yes | | 
 | **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  | I tried to do the SQL injection login bypass and failed and performed some vulnerability scan and found some vulnerabilities |
-| **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | | 
-| **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  | Running vulnerability scans using different tools to identify possible attacks the MOP site is vulnerable to, researching which of these vulnerabilities can be exploited and running a XML attack on the MOP site |  
+| **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | Researched cyber threats and vulnerabilities, emphasizing SQL injection attacks. Tried a SQL injection attack on the contact page, but it failed due to the missing database vulnerability. I'm currently learning how to use HTTP Strict Transport Security (HSTS) to improve the security of a website by requiring secure connections. I also utilized the OWASP ZAP tool to do a vulnerability assessment on the website to search for possible vulnerabilities. | 
+| **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  | Running vulnerability scans using different tools to identify possible attacks the MOP site is vulnerable to, researching which of these vulnerabilities can be exploited and running an XML attack on the MOP site |  
 | **Zachary Max Kein** | 220277143 | Undergrad | Senior | Cyber Security |  | |
-| **Antony Raju** | 221471405 | Postgrad | Senior | Cyber Security |  | |
+| **Antony Raju** | 221471405 | Postgrad | Senior | Cyber Security |  | I performed an SQL injection attack on the Chameleon Website login page and MOP website contact page. The attack was not successful because both the web pages were only designs. Those pages were not connected to the database and the submit button in the forms didn’t have any functionality. I also ran some vulnerability scans of the website using the tool OWASP ZAP. I have been actively looking for further vulnerabilities, after finding out several existing vulnerabilities that exist within the various headers of the MOP website |
 | **Amal Paul** | 222197619 | Postgrad | Senior | Cyber Security | | Investing much time in learning more about security and risks. By taking classes, reading, and putting what I learn into practice, I'm achieving this. This makes it easier for me to comprehend and manage the risks of the internet. I'm getting better at securing PCs and data from malicious web activity by doing this. For this, I accessed LinkedIn, YouTube and other online platforms. My current priority is thoroughly testing the contact page. This entails careful inspection and assessment to make sure the functionality, usability, and security precautions adhere to the planned requirements. |
 
 
