--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -319,13 +319,13 @@ The City of Melbourne has been an Australian leader in Open Data since 2014. The
 
 This project entails the development of an educational platform that showcases the practical applications of Open Data, specifically designed to cater to the needs of various stakeholders, such as industry professionals, government entities, and academic researchers. The primary objective of this project is to leverage the utilisation of the City of Melbourne's Open Data.
 
-The long-term goal is to data usage, facilitating innovative and informed solutions to contemporary challenges across the City of Melbourne council area.
+The long-term goal is to utilize data and facilitate innovative and informed solutions to contemporary challenges across the City of Melbourne council area.
 
 #### Aims This Trimester
 
-The initial main focus is to understand the documentation for the project's new API and systematically work through each published (and yet to be published) notebooks and modify the code so that they will run if downloaded.
+The main focus is to apply the new API for the Melbourne Open Data Playground to the remaining unmodified published notebooks so that they will run when downloaded.
 
-The aim for the Data Science team is to create a new set of use cases that fit within the 3 defined key areas of interest from the City Of Melbourne. The team is planning to complete a full set of use cases.
+The aim for the Data Science team is to create a new set of use cases that fit within the 3 defined key areas of interest from the City Of Melbourne. The team is planning to create new use cases and also have enough in the backlog for trimester 3.
 
 The web team is aiming to further streamline the processes for which the notebooks are published, and working with the design team to optimise the device browsing of our website. As part of the approach to the website, the cyber security team will be conducting tests and an audit, not only for the City of Melbourne Project project but also throughout the whole of Chameleon to ensure that all projects are up to par when it comes to security, all tests will be reported and if there any major issues detected within any of the projects the securiity team will ensure the best practices are being implemented.
 
@@ -345,7 +345,7 @@ The web team is aiming to further streamline the processes for which the noteboo
 - Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigate them - (Cyber Security Team)
 
 #### Current Progress
-The Data Science team has... 
+The Data Science team has brainstormed a new set of use case ideas that fits the 3 defined key areas of interest for the City of Melbourne and began working on them. The team also continues to work on repointing the APIs for the published notebooks to API 2.0 and 2.1. 
 
 The Cyber Security team has... 
 
@@ -354,7 +354,6 @@ The web dev team has updated the missing pages of the MOP website, the team then
 **MOP ACHIEVEMENTS TO BE LISTED HERE**
 
 The list below outlines the team's main achievements so far:
-- Completed repointing some of the published use case APIs.
 - Completed defining a series of use cases to be explored by the DS team.
 - Presented new use case ideas to the client at the City Of Melbourne.
 - All the missing pages of the website have been fixed and displayed properly on home page.
@@ -380,7 +379,7 @@ The web dev team will continue to work on publishing new user case pages and res
 | **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  |
 | **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes | I'm currently working on a use case to understand pedestrian accidents and how age affects them. It focuses on solutions like giving older people and disabled people more time to cross the road using touch cards so far, data extraction has been done after choosing the data for analysis. |
 | **Yash Krupanand Daware** | 222482648 | Postgrad | Junior | Data Science | Yes | |
-| **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science | Yes | |
+| **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science | Yes | I have implemented a new API 2.0 for one of the green walls datasets and am implementing the api for the other datasets. I am rewriting parts of the code so that it can run on the latest data without producing errors. As a datascience team leader I have also created tutorials, mentored students, hosted team meetings and contributed to company tasks. |
 | **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science | Yes | I am working with Nathan to develop a use case called Urban Art Explorer, we are using 3 datasets from the City of Melbourne Open Data. At the start of the trimester, I created a Trello card for Nathan and me. I added a checklist to keep us on track and to mark our progress. I was the host of the weekly team meeting in week 6. I went through how to set up an introduction to the use case and I am doing a proper tutorial on the process of formatting an introduction for use cases. During the break, I finished the rough cut for the introduction of the use case and figured out how to filter out duplicate data.|
 | **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  |  I developed a new use case and set up three new APIs. I filtered the APIs to receive only the necessary data and combined them into one dataframe. After removing duplicates, I implemented code to find the closest piece of art to the user's location. I also added links for users to view the art. Using the Google API, I converted coordinates into addresses. The distance to each piece of art is also displayed. Furthermore, I integrated a map, expanded on the use case, and created another version to locate the nearest bar.|
 | **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science|  | I created a new use case - A preview of the changes in the city of Melbourne, and obtained data through APIs and performed data extraction. And pushed my work to my GitHub playground.|
